--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <!--Button Section-->
             <div class="flex gap-5">
 
-                <button class="flex justify-center items-center gap-2 w-[125px] h-[52px] bg-[rgba(65,255,107,0.1)] rounded-full">
+                <button  class="flex justify-center items-center gap-2 w-[125px] h-[52px] bg-[rgba(65,255,107,0.1)] rounded-full">
                     <img class="h-[30px] w-[30px]" src="assets/heart.png" alt="">
-                    <span>0</span>
+                    <span id = "loveChange">0</span>
                 </button>
 
                 <button class="flex justify-center items-center gap-2 w-[125px] h-[52px] bg-[rgba(65,255,107,0.1)] rounded-full">
                     <img class="h-[30px] w-[30px]" src="assets/coin.png" alt="">
-                    <span>100</span>
+                    <span id="coinChange">100</span>
                 </button>
 
-                <button class="w-[125px] h-[52px] bg-[#00A63E] rounded-full">2 Copy</button>
+                <button class="w-[125px] h-[52px] bg-[#00A63E] rounded-full"> <span id="copy">0</span> Copy</button>
 
             </div>
         </nav>
@@ -53,7 +53,7 @@
 
      <!-- Main Section -->
     <main class="bg-[rgba(65,255,107,0.1)] h-auto">
-      <div class="ml-[60px] mr-[60px] p-[40px] grid grid-cols-[3fr_1fr] gap-[30px]">
+      <div class="ml-[10px] mr-[10px] p-[40px] grid grid-cols-[3fr_1fr] gap-[30px]">
 
 
         <div class="grid grid-cols-3 gap-[30px]">
@@ -62,7 +62,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/emergency.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id="love1" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">National Emergency Number</p>
@@ -73,9 +73,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy1"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn1"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -86,7 +88,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/police.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love2" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Police Helpline Number</p>
@@ -97,9 +99,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy2"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn2"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -110,7 +114,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/fire-service.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id="love3" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Fire Service Number</p>
@@ -121,9 +125,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy3"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn3"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -134,7 +140,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/ambulance.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love4" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Ambulance Service</p>
@@ -145,9 +151,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy4"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn4"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -158,7 +166,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/emergency.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love5" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Women & Child Helpline</p>
@@ -169,9 +177,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy5"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn5"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -182,7 +192,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/emergency.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love6" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Anti-Corruption Helpline</p>
@@ -193,9 +203,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy6"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn6"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -206,7 +218,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/emergency.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love7" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Electricity Helpline</p>
@@ -217,9 +229,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy7"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn7"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -230,7 +244,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/emergency.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love8" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Brac Helpline</p>
@@ -241,9 +255,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy8"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn8"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -254,7 +270,7 @@
             <div class="bg-white rounded-xl p-8">
                 <div class="flex items-center justify-between">
                     <img src="assets/emergency.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <i id = "love9" class="fa-regular fa-heart"></i>
                 </div>
                 <div class="mt-[16px]">
                     <p class="inter-hind font-bold text-[24px]">Bangladesh Railway Helpline</p>
@@ -265,9 +281,11 @@
                 </div>
                 <div class="flex items-center gap-2 mt-[24px]">
                     <button
+                        id = "copy9"
                         class="flex items-center justify-center gap-2 border rounded-[8px] w-[180px] h-[40px] text-gray-500"><i
-                            class="fa-regular fa-copy"></i>Copy</button>
+                        class="fa-regular fa-copy"></i>Copy</button>
                     <button
+                        id = "callBtn9"
                         class="flex items-center bg-green-600 text-white justify-center gap-2 border rounded-[8px] w-[180px] h-[40px]">
                         <i class="fa-solid fa-phone"></i> Call
                     </button>
@@ -280,23 +298,9 @@
         <div class="bg-white rounded-xl p-8">
             <div class="flex items-center justify-between gap-4">
                 <p class="text-[16px] font-medium"><i class="fa-solid fa-clock-rotate-left"></i> Call history</p>
-                <button class="bg-green-600 text-white rounded-full px-8 py-2">Clear</button>
+                <button id="clear" class="bg-green-600 text-white rounded-full px-8 py-2">Clear</button>
             </div>
-            <div class="mt-8 space-y-6">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <p class="text-[16px]">Fire Service Number</p>
-                        <p class="mt-[2px] text-gray-500">999</p>
-                    </div>
-                    <p class="text-[12px] text-gray-500">11:36:58 AM</p>
-                </div>
-                <div class="flex items-center justify-between">
-                    <div>
-                        <p class="text-[16px]">National Emergency Number</p>
-                        <p class="mt-[2px] text-gray-500">999</p>
-                    </div>
-                    <p class="text-[12px] text-gray-500">11:38:12 AM</p>
-                </div>
+            <div id="list" class="mt-8 space-y-6">
             </div>
         </div>
 
@@ -304,6 +308,7 @@
 </main>
 
 
+<script src="script.js"></script>
 </body>
 
 </html>
