Correct the html file for fixing problem in screen size

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <!-- Main Section -->
     <main class="bg-[rgba(65,255,107,0.1)] h-auto">
         <div class="ml-2 mr-2 p-4 grid gap-6 grid-cols-1 md:grid-cols-[3fr_1fr]">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 md:gap-[30px]">
 
-            <div class="grid grid-cols-1 sm:grid-cols-2">
                 <!-- card1 -->
                 <div class="bg-white rounded-xl p-8 shadow-lg">
                     <div class="flex items-center justify-between">
@@ -264,7 +264,7 @@
             <div class="bg-white rounded-xl p-6  shadow-lg">
                 <div class="flex items-center justify-between gap-4">
                     <p class="text-[16px] font-medium"><i class="fa-solid fa-clock-rotate-left"></i> Call history</p>
-                    <button id="clear" class="bg-green-600 text-white rounded-full px-6 py-2">Clear</button>
+                    <button id="clear" class="bg-green-600 text-white rounded-full px-6 py-2 hover:bg-gray-700">Clear</button>
                 </div>
                 <div id="list" class="mt-6 space-y-6"></div>
             </div>
